fixed some styling like background fixedness and spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ html, body {
 		linear-gradient(45deg, #ECEDDC 25%, transparent 25%);	
 	background-size: 100px 100px;
 	background-color: #b2dfdb;
+	background-attachment: fixed;
 }
 
 nav {
@@ -22,6 +23,13 @@ input {
 
 h6 {
 	font-weight: 600;
+}
+
+.instructions {
+	background-color: white;
+	border-radius: 10px;
+	padding: 20px 40px;
+	color: #37474f ;
 }
 
 .form-background {
